hide redundant info in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Daksh's Blog
-author: Daksh
-email: dakshtyagi94@gmail.com
+#title: Daksh's Blog
+#author: Daksh
+#email: dakshtyagi94@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 
 # social links
