add title and author

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-#title: Daksh's Blog
-#author: Daksh
+title: Forever Learning
+author: Daksh
 #email: dakshtyagi94@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 
