--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ description: > # this means to ignore newlines until "baseurl:"
 github_username:  Daksh-T # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima
+remote_theme: daattali/beautiful-jekyll
