--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 title: Forever Learning
-author: Daksh
-#email: dakshtyagi94@gmail.com
 description: "A blog that focuses on the joy of discovery and learning"
-# social links
-#twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  Daksh-T # DO NOT include the @ character, or else the build will fail!
+author:
+  name: Daksh
+  email: "me@daksh.page"
+
+minima:
+  social_links:
+    github: Daksh-T
+    microdotblog: daksh
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 remote_theme: jekyll/minima
