made changes to all_posts.md

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Forever Learning
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 remote_theme: jekyll/minima
+header_pages:
+  - all_posts.md
 
 minima:
   skin: solarized
