--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Forever Learning
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 remote_theme: jekyll/minima
+google_analytics: ${{ secrets.GANALYTICS_ID }}
 header_pages:
   - all_posts.md
 
