--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Forever Learning
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 remote_theme: jekyll/minima
-google_analytics: ${{ secrets.GANALYTICS_ID }}
+google_analytics: G-KS7JEE3B5J
 header_pages:
   - all_posts.md
 
