18 add about me page (#25)
* add about_me

* fix config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ remote_theme: jekyll/minima
 google_analytics: G-KS7JEE3B5J
 header_pages:
   - all_posts.md
+  - about_me.md
 
 minima:
   skin: solarized
