edit header_pages in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@ title: Forever Learning
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 remote_theme: jekyll/minima
-header_pages:
-  - all_posts.md
-  - about_me.md
 
 minima:
   skin: solarized
+
+header_pages:
+  - all_posts.markdown
+  - about_me.markdown
