--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,10 @@ title: Forever Learning
 show_excerpts: false # set to false to remove excerpts on the homepage
 remote_theme: jekyll/minima
 google_analytics: G-KS7JEE3B5J
-header_pages:
-  - all_posts.md
-  - about_me.md
 
 minima:
   skin: solarized
+
+header_pages:
+  - all_posts.markdown
+  - about_me.markdown
