--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 title: Forever Learning
 
 show_excerpts: false # set to false to remove excerpts on the homepage
-remote_theme: minima
 google_analytics: G-KS7JEE3B5J
+theme: minima
 
 minima:
   skin: solarized
 
-header_pages:
-  - all_posts.md
-  - about_me.md
+plugins:
+  - jekyll-feed
