--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Forever Learning
+description: Personal blog written by a student
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 google_analytics: G-KS7JEE3B5J
