--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Personal blog written by a student
 
 show_excerpts: false # set to false to remove excerpts on the homepage
 google_analytics: G-KS7JEE3B5J
-theme: minima
+remote_theme: jekyll/minima
 
 minima:
   skin: solarized
